[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "py-dss-tools"
version = "0.1.0"
description = "Advanced Python tools for OpenDSS leveraging py-dss-interface."
readme = "README.rst"
license = {text = "MIT"}
authors = [
  {name = "Paulo Radatz", email = "paulo.radatz@gmail.com"}
]
requires-python = ">=3.9"
keywords = ["OpenDSS", "Python", "Power Systems", "Distribution Systems", "Energy"]
dependencies = [
	"py-dss-interface>=2.0.2",
	"pandas>=1.5.0",
	"matplotlib>=3.6.0",
	"plotly>=5.10.0"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/PauloRadatz/py_dss_tools"
Repository = "https://github.com/PauloRadatz/py_dss_tools"

[tool.setuptools]
packages = { find = {where = ["src"]} }

